Project 4 SuperLotto!/compiling_error.txt
C:\Users\henry\source\repos\Project 4 SuperLotto!\Project 4 SuperLotto!\Source.cpp: In function 'int main()':
C:\Users\henry\source\repos\Project 4 SuperLotto!\Project 4 SuperLotto!\Source.cpp:340:16: error: 'system' was not declared in this scope
  system("PAUSE");
                ^
